samples/_failures_safe/1761502625_870d21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e220f0a.c: In function ‘print_shortest_paths’:
./samples/SAFE/__tmp_9e220f0a.c:177:12: error: missing terminating " character
  177 |     printf("Short
      |            ^~~~~~
./samples/SAFE/__tmp_9e220f0a.c:177:5: error: expected expression at end of input
  177 |     printf("Short
      |     ^~~~~~
./samples/SAFE/__tmp_9e220f0a.c:177:5: error: expected declaration or statement at end of input
